<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/about_info_version"
			style="@style/BaseText.About"
			android:text="@string/about_info_version" />

		<ImageView
			android:id="@+id/donate_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal|center_vertical"
			android:contentDescription="@string/about_info_donate"
			android:paddingTop="12dip"
			android:src="@drawable/donate" />

		<TextView
			android:id="@+id/about_info_author"
			style="@style/BaseText.About"
			android:text="@string/about_info_author" />

		<TextView
			android:id="@+id/about_info_homepage"
			style="@style/BaseText.About"
			android:autoLink="web|email"
			android:text="@string/about_info_homepage" />

		<TextView
			android:id="@+id/about_info_extra"
			style="@style/BaseText.About"
			android:autoLink="web|email"
			android:text="@string/about_info_extra" />

		<TextView
			android:id="@+id/about_info_questions"
			style="@style/BaseText.About"
			android:autoLink="web|email"
			android:text="@string/about_info_questions" />

		<TextView
			android:id="@+id/about_info_thanks"
			style="@style/BaseText.About"
			android:autoLink="web|email"
			android:text="@string/about_info_thanks" />

		<TextView
			android:id="@+id/about_info_translation"
			style="@style/BaseText.About"
			android:autoLink="web|email"
			android:text="@string/about_info_translation" />
	</LinearLayout>

</ScrollView>