<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="3dip" >

	<TextView
		android:id="@+id/tv_stats_row_frequency"
		style="@style/BaseText"
		android:layout_width="0dip"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:gravity="center_vertical"
		android:text="@string/stats_frequency" />

	<TextView
		android:id="@+id/tv_stats_row_perc"
		android:layout_width="0dip"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:ellipsize="marquee"
		android:gravity="center_vertical|right"
		android:text="@string/stats_perc" />

	<TextView
		android:id="@+id/tv_stats_row_perc5"
		android:layout_width="0dip"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:ellipsize="marquee"
		android:gravity="center_vertical|right"
		android:text="@string/stats_perc5" />

</LinearLayout>